--- a/app/assets/stylesheets/widgets/_tab_control.scss
+++ b/app/assets/stylesheets/widgets/_tab_control.scss
@@ -29,10 +29,12 @@ $tab_control-lozenge-height: 21px;
             padding: $pill-padding-vertical $pill-padding-horizontal;
             cursor: pointer;
             @include pill-tab($tab_control-lozenge-min-width, $tab_control-lozenge-height);
+            // specials for these sidebar tabs        
+            @include pill-tab-colors ($lozenge-color-normal-dark, $lozenge-color-hover-dark, $lozenge-color-selected-dark);
         }
+    }
 
-        // specials for these sidebar tabs        
-        @include pill-tab-colors ($lozenge-color-normal-dark, $lozenge-color-hover-dark, $lozenge-color-selected-dark);
-            
+    .chorus_search_container {
+        margin: 2px 10px 2px 10px;
     }
 }
